# SIMD-Performance-Test

./: .gitignore  CMakeLists.txt  Timer.h  VectorSineTest.h  main.cpp
Source/: VectorSineTest.h  main.cpp
Source/Testing/: TestFloat.hpp  Testing.hpp
Source/ssimd/: ssimd.hpp
Source/ssimd/Array/: ArrayTrig.hpp
Source/ssimd/Core/: Config.hpp  GenericImpl.hpp
Source/ssimd/Generic/: GenericTrig.hpp
Source/ssimd/Register/: AllRegisters.hpp  Register.hpp  RegisterAVX.hpp  RegisterFallback.hpp  RegisterNeon.hpp  RegisterOverloads.hpp  RegisterSSE.hpp
